--- a/pom.xml
+++ b/pom.xml
@@ -276,6 +276,12 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>com.squareup</groupId>
+            <artifactId>otto</artifactId>
+            <version>1.3.6</version>
+        </dependency>
+
     </dependencies>
 
     <build>
