--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
         <dependency>
             <groupId>android</groupId>
             <artifactId>android</artifactId>
-            <version>4.4.2_r3</version>
+            <version>5.0.1_r2</version>
             <scope>provided</scope>
         </dependency>
 
@@ -282,6 +282,13 @@
             <version>1.3.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.android.support</groupId>
+            <artifactId>appcompat-v7</artifactId>
+            <version>21.0.3</version>
+            <type>aar</type>
+        </dependency>
+        
     </dependencies>
 
     <build>
@@ -326,7 +333,7 @@
                 <artifactId>android-maven-plugin</artifactId>
                 <configuration>
                     <sdk>
-                        <platform>19</platform>
+                        <platform>21</platform>
                     </sdk>
                     <lint>
                         <skip>true</skip>
