Support (Material) ActionBar
* Adds v7 AppCompat support library and upgrades v4 support.
* BaseActivity now extends ActionBarActivity from v7 AppCompat.
* Replaces calls to getActionBar() with getSupportActionBar().
* Uses app namespace when declaring search action view in options_menu.xml.
* Uses MenuItemCompat to interact with options menu.
* Uses findViewById() to connect MapView since no longer auto-registered.
* Modifies MapzenTestRunner and project.properties to use AppCompat resources in tests.
* Replaces @Config(emulateSdk = 18) with hardcoded value in MapzenAndroidManifest

--- a/project.properties
+++ b/project.properties
@@ -2,3 +2,4 @@
 android.library.reference.1=target/unpacked-libs/css_library
 android.library.reference.2=target/unpacked-libs/cmv_library
 android.library.reference.3=target/unpacked-libs/cm_on-the-road
+android.library.reference.4=target/unpacked-libs/cas_appcompat-v7
