--- a/pom.xml
+++ b/pom.xml
@@ -297,9 +297,9 @@
         <pluginManagement>
             <plugins>
                 <plugin>
-                    <groupId>com.jayway.maven.plugins.android.generation2</groupId>
+                    <groupId>com.simpligility.maven.plugins</groupId>
                     <artifactId>android-maven-plugin</artifactId>
-                    <version>3.9.0-rc.2</version>
+                    <version>4.1.1</version>
                     <extensions>true</extensions>
                 </plugin>
 
@@ -330,9 +330,13 @@
 
         <plugins>
             <plugin>
-                <groupId>com.jayway.maven.plugins.android.generation2</groupId>
+                <groupId>com.simpligility.maven.plugins</groupId>
                 <artifactId>android-maven-plugin</artifactId>
                 <configuration>
+                    <androidManifestFile>AndroidManifest.xml</androidManifestFile>
+                    <resourceDirectory>res</resourceDirectory>
+                    <assetsDirectory>assets</assetsDirectory>
+                    <includeLibsJarsFromAar>true</includeLibsJarsFromAar>
                     <sdk>
                         <platform>21</platform>
                     </sdk>
