Add version to folder names for unpacked library resources

--- a/project.properties
+++ b/project.properties
@@ -1,5 +1,5 @@
 # For the use of Robolectric
-android.library.reference.1=target/unpacked-libs/css_library
-android.library.reference.2=target/unpacked-libs/cmv_library
-android.library.reference.3=target/unpacked-libs/cm_on-the-road
-android.library.reference.4=target/unpacked-libs/cas_appcompat-v7
+android.library.reference.1=target/unpacked-libs/css_library_3.0.0
+android.library.reference.2=target/unpacked-libs/cmv_library_2.4.1
+android.library.reference.3=target/unpacked-libs/cm_on-the-road_0.6
+android.library.reference.4=target/unpacked-libs/cas_appcompat-v7_21.0.3
