Fix android-maven-plugin group ID for release builds
This was causing version name, version code, and debuggable flag to not be properly set on non-development builds.

--- a/pom.xml
+++ b/pom.xml
@@ -463,7 +463,7 @@
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>com.jayway.maven.plugins.android.generation2</groupId>
+                        <groupId>com.simpligility.maven.plugins</groupId>
                         <artifactId>android-maven-plugin</artifactId>
                         <configuration>
                             <manifestVersionName>${project.version}</manifestVersionName>
@@ -512,7 +512,7 @@
                 <finalName>${artifactId}-${version}-unsigned</finalName>
                 <plugins>
                     <plugin>
-                        <groupId>com.jayway.maven.plugins.android.generation2</groupId>
+                        <groupId>com.simpligility.maven.plugins</groupId>
                         <artifactId>android-maven-plugin</artifactId>
                         <configuration>
                             <manifestVersionName>${project.version}</manifestVersionName>
