--- a/circle.yml
+++ b/circle.yml
@@ -14,9 +14,8 @@ dependencies:
     - echo y | android update sdk --all --no-ui --force --filter "build-tools-20.0.0,platform-tools,android-19"
     - scripts/install-dependencies.sh
     - scripts/install-leyndo.sh
-    - sudo apt-get update; sudo apt-get install s3cmd 
+    - sudo apt-get update; sudo apt-get install s3cmd
     - printf "[default]\naccess_key = $S3_ACCESS_KEY\n secret_key = $S3_SECRET_KEY" > ~/.s3cfg
-    - git clone https://github.com/mapzen/apk-s3-lister.git; cd apk-s3-lister; ./upload.sh 
 
 test:
   override:
@@ -31,5 +30,5 @@ deployment:
   master:
     branch: master
     commands:
-      - s3cmd put target/*.apk s3://android.mapzen.com/latest.apk 
+      - s3cmd put target/*.apk s3://android.mapzen.com/open/latest.apk
       - s3cmd put target/*.apk s3://android.mapzen.com/snapshots/master-$CIRCLE_BUILD_NUM.apk
