--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.mapzen.android</groupId>
     <artifactId>open</artifactId>
-    <version>1.2.3-SNAPSHOT</version>
+    <version>1.3.0</version>
     <packaging>apk</packaging>
 
     <name>Open</name>
@@ -55,7 +55,7 @@
         <url>http://github.com/mapzen/open</url>
         <connection>scm:git:git://github.com/mapzen/open.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/mapzen/open.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>open-1.3.0</tag>
     </scm>
 
     <dependencies>
